--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -10,6 +10,6 @@ body {
 
 // Customize the home page icon colors
 .icon-color {
-  color: darken(lightsteelblue, 20%);
+  // color: darken(lightsteelblue, 20%);
 }
 
